# shittygui.cpp

./: CMakeLists.txt  LICENSE.md  README.md
examples/: CMakeLists.txt  README.md
examples/output-sdl/: main.cpp
include/shittygui/: Animator.h  Event.h  Image.h  Screen.h  TextRendering.h  Types.h  ViewController.h  Widget.h  version.h
include/shittygui/Widgets/: Button.h  Checkbox.h  Container.h  ImageView.h  Label.h  ProgressBar.h  RadioButton.h  ToggleButtonBase.h
src/: Animator.cpp  CairoHelpers.h  EasingFunctions.h  Errors.h  Screen.cpp  TextRendering.cpp  Util.h  ViewController.cpp  version.c.in
src/Image/: Base.cpp  PngImage.cpp  PngImage.h
src/Widgets/: Base.cpp  Button.cpp  Checkbox.cpp  Container.cpp  ImageView.cpp  Label.cpp  ProgressBar.cpp  RadioButton.cpp  ToggleButtonBase.cpp
